[package]
name = "tidings"
version = "0.1.0"
authors = ["Pavel Sobolev <paveloom@riseup.net>"]
edition = "2021"
rust-version = "1.57"
description = "Finally, an RSS reader without a built-in browser"
documentation = "https://github.com/paveloom-a/Tidings"
readme = "README.md"
homepage = "https://github.com/paveloom-a/Tidings"
repository = "https://github.com/paveloom-a/Tidings"
license-file = "LICENSE.md"
keywords = ["rss", "news", "feed", "aggregator", "gtk4"]
categories = ["graphics"]

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
adw = { version = "=0.1.0", package = "libadwaita" }
anyhow = {version = "=1.0.53", features = ["backtrace"] }
gettext-rs = { version = "=0.7.0", features = ["gettext-system"] }
gtk = {package = "gtk4", version = "=0.4.6", features = ["v4_4"]}
log = "=0.4.14"
once_cell = "=1.9.0"
pretty_env_logger = "=0.4.0"
relm4 = { version = "=0.4.1", features = ["libadwaita"] }
relm4-macros = "=0.4.1"
