[package]
name = "tidings"
version = "0.1.0"
authors = ["Pavel Sobolev <paveloom@riseup.net>"]
edition = "2021"
rust-version = "1.63.0"
description = "Finally, an RSS reader without a built-in browser"
documentation = "https://github.com/paveloom-a/Tidings"
readme = "README.md"
homepage = "https://github.com/paveloom-a/Tidings"
repository = "https://github.com/paveloom-a/Tidings"
license-file = "LICENSE.md"
keywords = ["rss", "news", "feed", "aggregator", "gtk4"]
categories = ["graphics"]

[profile.release]
codegen-units = 1
lto = true
panic = 'abort'
strip = true

[dependencies]
adw = { git = "https://gitlab.gnome.org/World/Rust/libadwaita-rs", package = "libadwaita" }
generational-arena = "=0.2.8"
gettext-rs = { version = "=0.7.0", features = ["gettext-system"] }
gtk = { git = "https://github.com/gtk-rs/gtk4-rs", package = "gtk4", features = ["v4_6"]}
log = "=0.4.17"
once_cell = "=1.13.0"
rayon = "=1.5.3"
relm4 = { git = "https://github.com/Relm4/Relm4", features = ["libadwaita", "macros"] }
tokio = { version = "=1.20.1", features = ["rt-multi-thread", "sync", "time"] }
wyhash = "=0.5.0"
