install_data(
  '@0@.svg'.format(application_id),
  install_dir: iconsdir / 'hicolor' / 'scalable' / 'apps'
)

install_data(
  '@0@-symbolic.svg'.format(base_id),
  install_dir: iconsdir / 'hicolor' / 'symbolic' / 'apps',
  rename: '@0@-symbolic.svg'.format(application_id)
)

install_data(
  'big-x-symbolic.svg',
  install_dir: iconsdir / 'hicolor' / 'symbolic' / 'apps',
)

install_data(
  'emblem-synchronizing-symbolic.svg',
  install_dir: iconsdir / 'hicolor' / 'symbolic' / 'apps',
)

install_data(
  'plus-large-symbolic.svg',
  install_dir: iconsdir / 'hicolor' / 'symbolic' / 'apps',
)
